src/components/ComoFunciona/ComoFunciona.css
@import '../../marketplace.css';
@import url('https://fonts.googleapis.com/css?family=Pacifico');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap" rel="stylesheet');  
@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet')

:root {
  /*
    These variables are available in global scope through ":root"
    element (<html> tag). Variables with the same names are going to
    overwrite each other if CSS Properties' (PostCSS plugin)
    configuration "preserve: true" is used - meaning that variables
    are left to CSS bundle. We are planning to enable it in the future
    since browsers support CSS Properties already.
 */

  --SectionHero_desktopTitleMaxWidth: 625px;

  --SectionHero_animation: {
    animation-name: animationTitle;
    animation-duration: 0.5s;
    animation-timing-function: ease-out;
    -webkit-animation-fill-mode: forwards;


    visibility: hidden;
    opacity: 1;
    position: relative;
  }
}

/* Animation for the hero elements */

@keyframes animationTitle {
  0% {
    visibility: hidden;
    opacity: 0;
    top: -20px;
  }
  100% {
    visibility: visible;
    opacity: 1;
    top: 0;
  }
}

.root {
  @apply --backgroundImage2;
  width: 100%;
  height: 100%;
  /* Text positioning is done with paddings */
}
.vertAlign {
  position: absolute;
  top: 50%;
  transform: translate(0, -50%);

}


.heroContent {
overflow: auto;
width: auto;
height: auto;
float: right;

  @media (--viewportMedium) {
    margin: 0 7.5vw 0 7.5vw;
  }

  /* Special viewport for adjusting the heroContent's placement */

  @media only screen and (min-width: 1025px) and (max-width: 1366px) {
    padding: 0 36px 0 36px;
  }

  @media only screen and (min-width: 1367px) {
    margin: 0 auto;
    max-width: calc(1052px + 36px + 36px);
    width: 100%;
    padding: 0 36px 0 36px;
  }
}

.heroMainTitle {
  
  @apply --marketplaceHeroTitleFontStyles;
  color: var(--matterColorLight);

  @apply --SectionHero_animation;
  animation-delay: 2s;

  @media (--viewportMedium) {
    max-width: var(--SectionHero_desktopTitleMaxWidth);
  }
}
.heroMainSloganTitle{
  margin-top: 1.5em;
  font-family: 'Open Sans', sans-serif;
        font-weight: 270;
        font-size: 30px;
        color: var(--matterColorDark);
        text-align: right;

  @apply --SectionHero_animation;
  animation-delay: 2s;

  @media (--viewportMedium) {
    max-width: var(--SectionHero_desktopTitleMaxWidth);
  }

}

.heroMainTitle2 {
  font-family: 'Open Sans',normal;
        font-size: 80px;
        color: #65cdf4;
        

  @apply --SectionHero_animation;
  animation-delay: 2s;

  @media (--viewportMedium) {
    max-width: var(--SectionHero_desktopTitleMaxWidth);
  }
}

.heroMainSlogan2 {
  font-family: 'Open Sans', sans-serif;
        font-weight: 270;
        font-size: 30px;
        color: var(--matterColorDark);
        text-align: right;

  @apply --SectionHero_animation;
  animation-delay: 2s;

  @media (--viewportMedium) {
    max-width: var(--SectionHero_desktopTitleMaxWidth);
  }
}
.heroSubTitle {
  font-family: 'Open Sans', sans-serif;
        font-weight: 600;
        font-size: 30px;
        color: var(--matterColorDark);
        text-align: right;

  @apply --SectionHero_animation;
  animation-delay: 2s;

  @media (--viewportMedium) {
    max-width: var(--SectionHero_desktopTitleMaxWidth);
  }
}


.heroButton {
  @apply --marketplaceButtonStyles;
  @apply --SectionHero_animation;

  animation-delay: 0.8s;
  

  @media (--viewportMedium) {
    display: block;
    width: 260px;
    
  }
}

.heroButtonCustom {
  font-family: 'Montserrat',400;
        font-weight: 500;
        font-size: 20px;
        color: var(--successColorLight);
        text-align: center;

  /* Dimensions */
  display: block;
  min-height: 39px;
  margin: 0;
  margin-bottom: 15px;
  width: 250px;
  

  /* Padding is only for <a> elements where button styles are applied,
  buttons elements should have zero padding */
  padding: 20px 0 20px 0;

  @media (--viewportMedium) {
    padding: 20px 0 20px 0;
  }

  /* Borders */
  border: none;
  border-radius: var(--borderRadius);
  

  /* Colors */
  background-color: #eb0089 ;
  /*Buscar cachorros sombra*/
  box-shadow: -11px -11px -10px black;

  

  /* Text */
  text-align: center;
  text-decoration: none;

  /* Effects */
  transition: all var(--transitionStyleButton);
  cursor: pointer;

  &:hover,
  &:focus {
    outline: none;
    background-color: var(--marketplaceColorDark);
    text-decoration: none;
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
  }
  &:disabled {
    background-color: var(--matterColorNegative);
    color: var(--matterColorLight);
    cursor: not-allowed;
    box-shadow: none;
  }

  @media (--viewportMedium) {
    min-height: 65px;
  }
}

